# The-Female-Gaze

./: .gitignore  CMakeLists.txt  README.md
resources/: tfg_quotes.csv  tfg_quotes_backup.csv  tfg_quotes_helloworld.csv
resources/rouge-script/: OFL.txt
src/: main.cpp
